--- a/index.html
+++ b/index.html
@@ -6,29 +6,31 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="mainContainer">
-    <div class="controlsUpper">
-      <button id="logBtn">Log</button>
-      <button id="rulesBtn">Rules</button>
-      <button id="endBtn">End</button>
-      <button id="witchBtn">Witch</button>
-      <button id="potionBtn">Potion</button>
-    </div>
-    <div id="trackContainer">
-      <div id="trackChipsContainer"></div>
-    </div>
-    <div id="bagChipsContainer">
-        <canvas id="chipsCanvas"></canvas>
-    </div>
-    <div class="controlsLower">
-      <div id="whiteContainer">
-        <div id="whiteCounter">0/7</div>
-        <div id="whiteOdds">0%</div>
+  <div id="staticContainer">
+    <div id="mainContainer">
+      <div class="controlsUpper">
+        <button id="logBtn">Log</button>
+        <button id="rulesBtn">Rules</button>
+        <button id="endBtn">End</button>
+        <button id="witchBtn">Witch</button>
+        <button id="potionBtn">Potion</button>
       </div>
-      <button id="drawBtn">Draw Chip</button>
+      <div id="trackContainer">
+        <div id="trackChipsContainer"></div>
+      </div>
+      <div id="bagChipsContainer">
+          <canvas id="chipsCanvas"></canvas>
+      </div>
+      <div class="controlsLower">
+        <div id="whiteContainer">
+          <div id="whiteCounter">0/7</div>
+          <div id="whiteOdds">0%</div>
+        </div>
+        <button id="drawBtn">Draw Chip</button>
+      </div>
     </div>
   </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
+  <script src="matter.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
