--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <button id="potionBtn">Potion</button>
       </div>
       <div id="trackContainer">
-        <div id="trackChipsContainer"></div>
+        <div id="trackActual" class="track"></div>
       </div>
       <div id="bagChipsContainer">
           <canvas id="chipsCanvas"></canvas>
