--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     </div>
   </div>
   <script src="matter.js"></script>
+  <script src="init.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
