Empty Potion & Most Chip Effects

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
       <div class="controlsLower">
         <div id="potionBtn">
-          <img src="ui/potion.png">
+          <img id="potionImg" src="ui/potion.png">
         </div>
         <button id="drawBtn">Draw Chip</button>
       </div>
