--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quacks Companion</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css?v=2026-01-14">
 </head>
 <body>
   <div id="staticContainer">
@@ -20,7 +21,6 @@
         <div id="whiteContainer">
           <div id="whiteCounter" class="outlineText">0/7</div>
           <img src="ui/cloud.png" id="whiteCloud">
-          <!-- <div id="whiteOdds">0%</div> -->
         </div>
         <button>
           <div class="overlayText outlineText">Witch</div>
@@ -45,6 +45,6 @@
   </div>
   <script src="matter.js"></script>
   <script src="init.js"></script>
-  <script src="script.js"></script>
+  <script src="script.js?v=2026-01-14"></script>
 </body>
 </html>
